--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.9.0",
     "formik": "^2.4.6",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "yup": "^1.6.1"
